--- a/assets/assets2/css/app.css
+++ b/assets/assets2/css/app.css
@@ -9304,7 +9304,7 @@ a.text-dark:hover,a.text-dark:focus{
 }
 #me{
     background-color:#0f7dbc;
-    background-image:url(/img/backdrop.png);
+    background-image:url(../img/backdrop.png);
     background-size:cover;
     background-position:center;
     padding:20px;
@@ -9465,7 +9465,7 @@ header .header-container .owl-carousel .owl-dots .owl-dot.active span,header .he
 }
 header .header-container .owl-carousel .item #banner{
     border-radius:5px;
-    background-image:url(/img/banners/b7ba3c818002c03538d353152e0314bf49a9fd5e.png);
+    background-image:url(../img/banners/b7ba3c818002c03538d353152e0314bf49a9fd5e.png);
     width:100%;
     height:140px;
     background-repeat:no-repeat;
@@ -9759,7 +9759,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     height:65px
 }
 .player .btn{
-    background-image:url(/img/radio/button.png);
+    background-image:url(../img/radio/button.png);
     width:52px;
     height:52px;
     float:left;
@@ -9767,7 +9767,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     margin-top:16px
 }
 .player .btn .play{
-    background-image:url(/img/radio/play_pause.png);
+    background-image:url(../img/radio/play_pause.png);
     background-position:left top;
     width:20px;
     height:30px;
@@ -9779,7 +9779,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     background-position:left bottom
 }
 .player .btn .pause{
-    background-image:url(/img/radio/play_pause.png);
+    background-image:url(../img/radio/play_pause.png);
     background-position:right top;
     width:22px;
     height:30px;
@@ -9827,18 +9827,18 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     }
 }
 .player .music{
-    background-image:url(/img/radio/music.png);
+    background-image:url(../img/radio/music.png);
     margin-top:10px
 }
 .player .room{
-    background-image:url(/img/radio/room.png);
+    background-image:url(../img/radio/room.png);
     background-position:left center
 }
 .player .listeners{
-    background-image:url(/img/radio/listeners.png)
+    background-image:url(../img/radio/listeners.png)
 }
 .player .handle{
-    background-image:url(/img/radio/handle.png);
+    background-image:url(../img/radio/handle.png);
     width:22px;
     height:17px;
     position:absolute;
@@ -9847,7 +9847,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     cursor:e-resize
 }
 .player .close{
-    background-image:url(/img/radio/close.png);
+    background-image:url(../img/radio/close.png);
     width:19px;
     height:20px;
     position:absolute;
@@ -9879,7 +9879,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     display:flex;
     overflow:hidden;
     padding:10px 0;
-    background-image:url(/img/coffee-house.png);
+    background-image:url(../img/coffee-house.png);
     background-size:cover
 }
 #staff-banner img{
@@ -9905,17 +9905,17 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     background-size:cover
 }
 .rank-profile.owner{
-    background-image:url(/img/staff/3110.jpg)
+    background-image:url(../img/staff/3110.jpg)
 }
 .rank-profile.manager{
-    background-image:url(/img/staff/2612.jpg)
+    background-image:url(../img/staff/2612.jpg)
 }
 .rank-profile.admin{
-    background-image:url(/img/staff/3132.jpg);
+    background-image:url(../img/staff/3132.jpg);
     background-position:bottom
 }
 .rank-profile.moderator{
-    background-image:url(/img/staff/3136.jpg);
+    background-image:url(../img/staff/3136.jpg);
     background-position:bottom
 }
 .rank-profile .staff-carousel .item{
@@ -9947,14 +9947,14 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     display:inline-block
 }
 .rank-profile .staff-carousel .item .bubble .left{
-    background:url(/img/bubbles/start.png);
+    background:url(../img/bubbles/start.png);
     width:31px;
     height:28px;
     float:left;
     margin-top:-4px
 }
 .rank-profile .staff-carousel .item .bubble .middle{
-    background:url(/img/bubbles/mid.png) repeat-x;
+    background:url(../img/bubbles/mid.png) repeat-x;
     width:auto;
     height:24px;
     padding:4px 5px 0;
@@ -9969,7 +9969,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     font-weight:400
 }
 .rank-profile .staff-carousel .item .bubble .right{
-    background:url(/img/bubbles/end.png) no-repeat;
+    background:url(../img/bubbles/end.png) no-repeat;
     width:6px;
     height:24px;
     float:left
@@ -10037,7 +10037,7 @@ header .btn-enter-hotel:hover,header .btn-enter-hotel:focus{
     color:#8ecfe2!important
 }
 #gallery-header .banner{
-    background-image:url(/img/coffee-house.png);
+    background-image:url(../img/coffee-house.png);
     background-size:cover;
     height:100px;
     width:100%;
@@ -10681,7 +10681,7 @@ h5.silver{
     display:flex;
     overflow:hidden;
     padding:10px 0;
-    background-image:url(/img/coffee-house.png);
+    background-image:url(../img/coffee-house.png);
     background-size:cover
 }
 #registration-banner img{
@@ -10694,14 +10694,14 @@ h5.silver{
     display:inline-block
 }
 #registration-banner .bubble .left{
-    background:url(/img/bubbles/start.png);
+    background:url(../img/bubbles/start.png);
     width:31px;
     height:28px;
     float:left;
     margin-top:-4px
 }
 #registration-banner .bubble .middle{
-    background:url(/img/bubbles/mid.png) repeat-x;
+    background:url(../img/bubbles/mid.png) repeat-x;
     width:auto;
     height:24px;
     padding:4px 5px 0;
@@ -10716,7 +10716,7 @@ h5.silver{
     font-weight:400
 }
 #registration-banner .bubble .right{
-    background:url(/img/bubbles/end.png) no-repeat;
+    background:url(../img/bubbles/end.png) no-repeat;
     width:6px;
     height:24px;
     float:left
